# Computer-Graphic-Project

assignment/: CMakeLists.txt  README.txt
assignment/demo/: CMakeLists.txt
assignment/demo/d0_hello_triangle/: main.cpp
assignment/demo/d1_glgears/: draw.cpp  main.cpp
assignment/demo/d2_imgui/: main.cpp
assignment/demo/d3_imgui/: main.cpp
assignment/demo/d4_simple_shader/: main.cpp
assignment/demo/d5_simple_shader/: main.cpp  shaders.h
assignment/demo/d6_matrices/: main.cpp  shaders.h
assignment/projects/skeleton_p1/: comm.cpp  comm.hpp  main.cpp
assignment/projects/skeleton_p2/: CMakeLists.txt  TransformVertexShader.glsl  input1.txt  main.cpp  shaders.h
